
public enum Alert {
        JAM, FAILURE, WITHOUT_PRODUCT, NO_CHANGE, NORMAL
}
