public enum Status {
    JAM, FAILURE, END_STOCK, NO_CHANGE, NORMAL;
}
