package interfaces;

public interface Incidence {
    public void setDate();
}
